<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="30dp"
    android:layout_gravity="center"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:textStyle="bold"
        android:text="@string/title_search_option"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_name"
            android:textSize="18sp"
            android:text="@string/pref_search_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_button_ingredient"
            android:textSize="18sp"
            android:text="@string/pref_search_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_button_both"
            android:textSize="18sp"
            android:text="@string/pref_search_both"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:layout_margin="10dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:gravity="end|center"
            android:id="@+id/button_cancel"
            android:textSize="18sp"
            android:text="@string/action_cancel"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/button_ok"
            android:textSize="18sp"
            android:text="@string/action_ok"
            android:layout_gravity="end"
            android:textColor="@color/colorAccent"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>