<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_margin="40dp"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:id="@+id/text_edit_servings"
        android:text="@string/title_edit_servings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:text="@string/title_servings"
            android:layout_height="wrap_content" />
        <EditText
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="12"
            android:inputType="number"
            android:textColorHint="@android:color/darker_gray"
            android:id="@+id/edit_servings"
            android:textSize="18sp"
            android:ellipsize="end"
            android:ems="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:gravity="end"
        android:weightSum="4"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"
            android:id="@+id/text_cancel"
            android:textColor="@color/colorAccent"
            android:text="@string/title_cancel"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="1"
            android:id="@+id/text_next"
            android:textColor="@color/colorAccent"
            android:text="@string/title_done"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>