<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container_account"
    tools:context="com.example.elena.shopeasy.ui.AccountActivity">
    <TextView
        android:id="@+id/account_info_text"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_info"
        android:drawableLeft="@drawable/ic_info"
        android:paddingBottom="10dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="24sp"
        android:text="@string/account_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        app:layout_constraintTop_toBottomOf="@+id/account_info_text"
        android:id="@+id/view1"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView

        android:id="@+id/account_rights_text"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_rights"
        android:drawableLeft="@drawable/ic_rights"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="24sp"
        android:text="@string/account_rights_title"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        app:layout_constraintTop_toBottomOf="@+id/account_rights_text"
        android:id="@+id/view2"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:textStyle="bold"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_login"
        android:drawableLeft="@drawable/ic_login"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="24sp"
        android:id="@+id/account_loginlogout_text"
        android:text="@string/account_loginlogout_title"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        app:layout_constraintTop_toBottomOf="@+id/account_loginlogout_text"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <fragment
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/fragment_footer"
        tools:layout="@layout/fragment_footer"
        android:name="com.example.elena.shopeasy.fragments.FooterFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:id="@+id/pb_loading_auth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp" />
</android.support.constraint.ConstraintLayout>
